<resources>
    <string name="app_name">星动</string>
    <string name="tip_double_click_exit">再次点击退出应用</string>
    <string name="copy_success">复制成功</string>
    <string name="no_network">好像没有网络信号！！</string>
    <string name="main_tab_name_home">首页</string>
    <string name="main_tab_name_broadcast">广播</string>
    <string name="main_tab_name_map">地图</string>
    <string name="main_tab_name_message">消息</string>
    <string name="main_tab_name_explore">发现</string>
    <string name="main_tab_name_me">个人</string>
    <string name="main_home_ranking_review">精彩回放</string>
    <string name="read_actic_title">阅读全文</string>
    <string name="info_type_wonderful_event">精彩赛事</string>
    <string name="transitional_image">the image of transition</string>
    <string name="need_lbs_permission_hint">需要定位权限</string>
    <string name="clear_bodies_failed_hint">清除位置信息失败</string>
    <string name="no_permission_hint">现在去「设置」打开定位服务并允许Kidoo获取位置信息吗?</string>
    <string name="no_location_hint">无法定位</string>
    <string name="location_get_failed_hint">无法获取位置信息</string>
    <string name="server_no_have_permission_hint">服务器定位失败，请检查权限</string>
    <string name="network_exception_hint">网络异常</string>
    <string name="key_is_invalid_hint">非法或无效的APP KEY</string>
    <string name="permission_dlg_tilte">温馨提示</string>
    <string name="permission_dlg_save_update">需要开启Kidoo对您手机的存储权限才能下载安装，是否现在开启</string>
    <string name="permission_dlg_save_location">需要开启Kidoo对您手机的定位权限才提供精确定位服务，是否现在开启</string>
    <string name="permission_dlg_save_goto">去开启</string>
    <string name="permission_dlg_save_no">取消</string>
    <string name="actionbar_title_setting">设置</string>
    <string name="guide_start_button_text">立即体验</string>
    <string name="sign_in_tilte">注册</string>
    <string name="sign_in">注册</string>
    <string name="forget_password">忘记密码?</string>
    <string name="login_in_tilte">登陆</string>
    <string name="login_acount_id_title">账号: </string>
    <string name="login_account_pwd_title">密码: </string>
    <string name="login_account_hint">请填写账号</string>
    <string name="login_password_hint">请填写密码</string>
    <string name="account_empty_error">账户或密码为空</string>
    <string name="sign_in_phone_tilte">手机号码:</string>
    <string name="sign_in_identifying_code_title">验证码:</string>
    <string name="sign_in_identifying_pwd_title">密码:</string>
    <string name="sign_in_pwd_hint">8-16位数字字母组合密码</string>
    <string name="sign_in_pwd_simple_hint">请输入8-16位数字字母组合密码</string>
    <string name="get_sms_call_success_hint">发送验证码成功,请在手机上查看</string>
    <string name="get_sms_call_faild_hint">获取验证码失败,请稍后再试</string>
    <string name="disclaimer_title">注册/登录即表示同意《星动》相关</string>
    <string name="disclaimer_about">《使用条款》</string>
    <string name="register_success_hint">注册成功，正在为您登陆平台</string>
    <string name="login_faild">登陆失败</string>
    <string name="action_select">选择操作</string>
    <string name="title_icon_null">图像不存在，上传失败</string>
    <string name="title_update_fail_status">个人信息更新失败&#8230;</string>
    <string name="login_exception_hint">登录异常</string>
    <string name="login_input_username_hint">手机号或邮箱</string>
    <string name="login_input_username_hint_error">请输入正确的手机号&#8230;</string>
    <string name="login_input_username_pwd_hint_error">请输入正确的手机号和密码&#8230;</string>
    <string name="login_hold_hint">记住密码</string>
    <string name="login_forget_hint">忘记密码？</string>
    <string name="login_register_hint">注册</string>
    <string name="login_other_hint">其他方式登录</string>
    <string name="register_input_username_hint">手机号</string>
    <string name="register_username_hint">用户名</string>
    <string name="register_sms_hint">获取验证码</string>
    <string name="register_sms_wait_hint">别激动,休息一下呗&#8230;</string>
    <string name="register_done_hint">完成</string>
    <string name="register_man_hint">男士</string>
    <string name="register_female_hint">女士</string>
    <string name="retrieve_pwd_step_hint">下一步</string>
    <string name="retrieve_pwd_email_label_one">邮箱用户找回密码，请</string>
    <string name="retrieve_pwd_email_label"><a>点击这里</a></string>
    <string name="reset_pwd_hint">请输入至少六位新密码</string>
    <string name="register_username_error">用户名太长&#8230;</string>
    <string name="hint_password">密码</string>
    <string name="register_pwd_hint">请输入至少六位数密码</string>
    <string name="hint_username_ok">请输入正确的手机号码</string>
    <string name="user_hint_login">点击头像登录</string>
    <string name="reset_pwd_label">重置密码</string>
    <string name="retrieve_pwd_label">找回密码</string>
    <string name="reset_pwd_submit">确认</string>
    <string name="request_error_hint">网络请求失败,请重试&#8230;</string>
    <string name="login_success_hint">登录成功</string>
    <string name="send_sms_code_success_hint">已成功发送验证码</string>
    <string name="reset_success_hint">密码重置成功</string>
    <string name="message_pwd_error">密码错误</string>
    <string name="message_username_null">用户名未填写！！！</string>
    <string name="progress_submit">正在提交…</string>
    <string name="footer_type_net_error">网络错误</string>
    <string name="menu_firends_list_title">好友列表</string>
    <string name="media_select_image_store_perm_hint">没有权限, 你需要去设置中开启读取手机存储权限.</string>
    <string name="media_select_image_camera_perm_hint">没有权限, 你需要去设置中开启相机权限.</string>
    <string name="media_select_image_perm_setting_ok">去设置</string>
    <string name="media_select_image_perm_setting_cancel">取消</string>
    <string name="media_select_image_toolbar_title">选择图片</string>
    <string name="media_image_select_opt_done">完成</string>
    <string name="media_image_select_opt_preview">预览</string>
    <string name="media_image_menu_aullof">全部照片</string>
    <string name="media_image_selected_done">完成</string>
    <string name="media_image_selected_count_hint">最多只能选择 </string>
    <string name="media_image_selected_count_hint_1"> 张照片</string>
    <string name="media_image_store_image_capacity">无法保存照片，请检查SD卡是否挂载</string>
    <string name="gallery_save_file_permmison_grant">请授予保存图片权限</string>
    <string name="gallery_save_file_not_have_external_storage_permission">没有外部存储权限!</string>
    <string name="gallery_save_file_not_have_external_storage">没有外部存储!</string>
    <string name="gallery_save_file_success">保存成功!</string>
    <string name="gallery_save_file_failed">存储失败!</string>
    <string name="image_select_opt_done">完成</string>
    <string name="image_select_opt_preview">预览</string>
    <string name="loading">加载中…</string>
    <string name="loading_no_more">已加载全部</string>
    <string name="error_view_no_data">暂无内容</string>
    <string name="error_view_loading">加载中…</string>
    <string name="error_view_loading_friend">数据初始化中…</string>
    <string name="error_view_load_error_click_to_refresh">内容加载失败\r\n <![CDATA[
        点击重新加载<font color="#c5663e">%s</font>
        ]]>  </string>
    <string name="error_view_network_error_click_to_refresh">没有可用的网络</string>
    <string name="tip_network_error">没有可用的网络</string>
    <string name="unlogin_tip">您还未登录\r\n或网络延迟</string>
    <string name="list_onloading">正在加载中...</string>
    <string name="state_network_error">网络错误</string>
    <string name="state_loading">正在加载…</string>
    <string name="state_not_more">没有更多数据</string>
    <string name="state_load_error">加载失败</string>
    <string name="state_refreshing">正在刷新</string>
    <string name="state_loading_error">数据加载中&#8230;</string>
    <string name="acton_ok">确定</string>
    <string name="acton_cancel">取消</string>
    <string name="my_broadcast_detail_toolbar_title">我的广播</string>
    <string name="my_broadcast_detail_broadcast_title">我的广播</string>
    <string name="my_broadcast_detail_game_title">我的赛事</string>
    <string name="my_broadcast_send">发送广播</string>
    <string name="have_no_capmaign_content">暂时没有比赛内容，赶快去参加吧</string>
    <string name="campaign_scroe_title">积分信息</string>
    <string name="campaign_all_round_title">所有场次信息</string>
    <string name="campaign_my_round_title">我的场次信息</string>
    <string name="campaign_level_title">比赛级别</string>
    <string name="campaign_time_title">赛事进行时间</string>
    <string name="campaign_formart_title">赛制</string>
    <string name="campaign_info_title">赛事信息</string>
    <string name="campaign_prompt_title">提示信息</string>
    <string name="campaign_address_title">比赛地址</string>
    <string name="campaign_format_session_num">共 %1$d 轮, 共 %2$d 场</string>
    <string name="campaign_format_session_ongoing">目前处于第 %1$d 轮, 第 %2$d 场</string>
    <string name="campaign_session_num">第 %1$d 轮, 第 %2$d 场</string>
    <string name="campaign_session_startTime">开始时间%1$s: </string>
    <string name="campaign_session_endTime">结束时间%1$s: </string>
    <string name="broadcast_detial_toolbar_title">广播详情</string>
    <string name="broadcast_detail_toolbar_menu_title">群聊</string>
    <string name="explore_item_challengerec">挑战信息</string>
    <string name="explore_item_ranking">排行榜</string>
    <string name="explore_item_findteam">查找战队</string>
    <string name="explore_item_activity">活动列表</string>
    <string name="explore_item_about">关于竞技场/战队</string>
    <string name="rationale_location_contacts">Kidoo 需要知道你在那</string>
    <string name="userinfo_tab_slogn_default">这家伙懒什么都没留下</string>
    <string name="userinfo_tab_decoration_item">我的奖章</string>
    <string name="userinfo_tab_campain_manager_item">赛事管理</string>
    <string name="userinfo_tab_campain_item">我的比赛</string>
    <string name="userinfo_tab_challengerec_item">挑战记录</string>
    <string name="userinfo_tab_team_item">我的战队</string>
    <string name="userinfo_tab_setting_item">设置</string>
    <string name="userinfo_medal_empty_hint">暂时没有奖章</string>
    <string name="user_detail_title">我的详情</string>
    <string name="user_detail_nickname_hint">请输入您的昵称</string>
    <string name="user_detail_realname_hint">请输入您的真实姓名</string>
    <string name="user_detail_realname">姓名</string>
    <string name="user_detail_email_hint">请输入您的邮箱</string>
    <string name="user_detail_email">邮箱</string>
    <string name="user_detail_birthday">请选择您的生日</string>
    <string name="user_detail_sign">个性签名</string>
    <string name="user_detail_sign_hint">请输入您的个性签名(最多不超过30个字符)</string>
    <string name="user_detail_menu_save">保存</string>
    <string name="user_detail_nickname_empty">请输入昵称～</string>
    <string name="user_detail_update_success">已成功修改资料！</string>
    <string name="aren_info_title">场地详情</string>
    <string name="aren_info_name_title">名称</string>
    <string name="aren_info_contact_title">联系方式</string>
    <string name="aren_info_address_title">地址</string>
    <string name="aren_info_detail_title">信息</string>
    <string name="aren_map_title">场地信息</string>
    <string name="setting_title">设置</string>
    <string name="exit_login">退出当前账号</string>
    <string name="setting_about">关于我们</string>
    <string name="setting_modify_pwd">修改密码</string>
    <string name="setting_feedback">意见与建议</string>
    <string name="exit_dialog_msg">您确定要退出么?</string>
    <string name="suggestion_edit_hint">请把您的宝贵意见和建议写与此处</string>
    <string name="channel_campaign_list_title">赛事列表</string>
    <string name="channel_hava_no_campaign_data">没有这个频道的比赛</string>
    <string name="campaign_detail_title">比赛详情</string>
    <string name="campaign_detail_schedule">赛程</string>
    <string name="create_competion_msg_hint">请输入您的赛事信息(最多不超过500个字符)</string>
    <string name="campaign_format_1">积分赛</string>
    <string name="campaign_format_2">淘汰赛</string>
    <string name="campaign_format_3">积分淘汰赛</string>
    <string name="competion_node_msg_title">节点信息</string>
    <string name="competion_node_time">时间</string>
    <string name="competion_node_time_hint">请选赛况时间</string>
    <string name="competion_node_pic">图片</string>
    <string name="competion_node_show_type">显示类型</string>
    <string name="competion_node_btn_select_pic">选择图片</string>
    <string name="competion_node_btn_add_confirm">确认添加</string>
    <string name="competion_node_show_type_0">所有人</string>
    <string name="competion_node_show_type_1">报名选手</string>
    <string name="competion_node_show_type_2">验证通过</string>
</resources>