<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@color/kidoo_black_alpha_03"
              android:orientation="vertical">

    <FrameLayout
        android:id="@+id/userinfo_header"
        android:layout_width="match_parent"
        android:layout_height="170dp">

        <ImageView
            android:id="@+id/userinfo_bg"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@null"
            android:scaleType="centerCrop"
            android:src="@color/blue_grey_400"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/lay_8"
            android:descendantFocusability="afterDescendants"
            >

            <TextView
                android:id="@+id/user_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="@dimen/lay_8"
                android:text="name"
                android:textColor="@color/white"
                android:textSize="@dimen/font_24"
                />

            <com.kidoo.customer.widget.glideimageview.GlideImageView
                android:id="@+id/portrait"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_alignParentBottom="true"
                android:layout_marginBottom="@dimen/lay_20"
                android:layout_marginLeft="@dimen/lay_16"
                android:contentDescription="@null"
                android:scaleType="centerCrop"
                android:src="@drawable/def_user"/>

            <com.kidoo.customer.widget.glideimageview.GlideImageView
                android:id="@+id/garden"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_alignTop="@+id/portrait"
                android:layout_marginLeft="@dimen/lay_8"
                android:layout_toRightOf="@+id/portrait"
                android:contentDescription="@null"
                android:src="@drawable/w_info_gender_m_p"/>

            <TextView
                android:id="@+id/slogn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/garden"
                android:layout_below="@+id/garden"
                android:layout_marginTop="@dimen/lay_8"
                android:layout_toRightOf="@+id/portrait"
                android:text="@string/userinfo_tab_slogn_default"
                android:textColor="@color/kidoo_black_alpha_112"
                android:textSize="@dimen/font_16"/>
        </RelativeLayout>


    </FrameLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:orientation="vertical">


        <com.kidoo.customer.widget.KidooSubtitleView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/lay_8"
            app:subtitle="@string/userinfo_tab_decoration_item"/>


        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/lay_56">

            <TextView
                android:id="@+id/medal_empty_hint"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="@dimen/lay_8"
                android:text="@string/userinfo_medal_empty_hint"
                android:textColor="@color/black_alpha_32"
                android:textSize="@dimen/font_18"
                />


            <android.support.v7.widget.RecyclerView
                android:id="@+id/rv_medal_list"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="@dimen/lay_8"
                android:overScrollMode="never"
                android:scrollbars="none"
                android:visibility="gone"
                />


        </FrameLayout>


    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/lay_12"/>


    <com.kidoo.customer.widget.MyEnterLayout
        android:id="@+id/userinfo_item_campain"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/list_item_normal_selector"
        android:clickable="true"
        app:itemIcon="@drawable/icon_beevaluated"
        app:itemTitle="@string/userinfo_tab_campain_item"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/lay_12"/>

    <com.kidoo.customer.widget.MyEnterLayout
        android:id="@+id/userinfo_item_campain_manager"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/list_item_normal_selector"
        android:clickable="true"
        app:itemIcon="@drawable/icon_beevaluated"
        app:itemTitle="@string/userinfo_tab_campain_manager_item"/>


    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/lay_12"/>

    <com.kidoo.customer.widget.MyEnterLayout
        android:id="@+id/userinfo_item_team"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/list_item_normal_selector"
        android:clickable="true"
        app:itemIcon="@drawable/icon_myteam"
        app:itemTitle="@string/userinfo_tab_team_item"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/lay_12"/>

    <com.kidoo.customer.widget.MyEnterLayout
        android:id="@+id/userinfo_item_challengerec"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/list_item_normal_selector"
        android:clickable="true"
        app:itemIcon="@drawable/icon_challengerec"
        app:itemTitle="@string/userinfo_tab_challengerec_item"/>


    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/lay_12"/>

    <com.kidoo.customer.widget.MyEnterLayout
        android:id="@+id/userinfo_item_setting"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/list_item_normal_selector"
        android:clickable="true"
        app:itemIcon="@drawable/icon_install"
        app:itemTitle="@string/userinfo_tab_setting_item"/>


</LinearLayout>